# BGIS

./: .gitignore  CMakeLists.txt  README.md
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apptest6  apptest6_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-aaf07d1d48ab34e1ce1a.json  cmakeFiles-v1-97fb76b386e1ace320a5.json  codemodel-v2-0002adc7bf786c6f1266.json  directory-.-Debug-a432f5aa5fe1ed56c6f1.json  index-2023-08-24T17-12-30-0067.json  target-all_qmllint-Debug-14f530338ba4f607eb75.json  target-all_qmllint_json-Debug-5723810b5ce1775b1094.json  target-all_qmllint_module-Debug-8d491fa89e137a56a0b0.json  target-all_qmltyperegistrations-Debug-aaf55a6086b574f21015.json  target-apptest6-Debug-5909cad03aeb60c350c5.json  target-apptest6_autogen-Debug-646c34db4b8871b188d6.json  target-apptest6_autogen_timestamp_deps-Debug-e44fca4e022e40a7bb5a.json  target-apptest6_qmlimportscan-Debug-82bd32bf55ba9e31dc0a.json  target-apptest6_qmllint-Debug-32b6ebb7afe5cd39595d.json  target-apptest6_qmllint_json-Debug-dc10bbd9fbf017f46ba7.json  target-apptest6_qmllint_module-Debug-ac4c4532407aa43be90a.json  target-apptest6_qmltyperegistration-Debug-72becb9f8c261f9d8088.json  target-apptest6_tooling-Debug-69e1950efa109cb548bb.json
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/deploy_qml_imports/: apptest6.cmake
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_apptest6.cmake  Qt6_QmlPlugins_Imports_apptest6.rsp
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QColor.BE3D8E3593EAE8E9.idx  QGuiApplication.0444E47F89E334EF.idx  QList.68CC55F51CA89B76.idx  QMatrix4x4.005E3CB6A1D50BE4.idx  QMetaType.FA7195C21CA145DF.idx  QObject.863CDC2A667B1A8B.idx  QQmlApplicationEngine.E8A0540EFA82E1FC.idx  QQuickItem.0468B5A1BB4BE470.idx  QRect.4569B1B25E567EEB.idx  QRectF.ABF7D386F012E406.idx  QSGFlatColorMaterial.52A5A5DABC67B27F.idx  QSGGeometryNode.DC4B712738556AE8.idx  QSize.048AE5FC6EA143B9.idx  QSizeF.E62E97146BB6EDD5.idx  QTimer.42C2858CE67845C2.idx  QTransform.A622835A9196383E.idx  Scene.cpp.9BDD8EA60498D81F.idx  Scene.h.7DDBDCA013DFC656.idx  __stddef_max_align_t.h.5BCC7A27D7A98D51.idx  algorithm.198D292E89AE3500.idx  algorithmfwd.h.CBE6A3C8234FC8A4.idx  align.h.9FB78D0178B8447B.idx  alloc_traits.h.F3E78247041F0BBB.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.5941484D80F2DFAD.idx  allocator.h.C73F7957609C8D1B.idx  array.964D276A88C4B6FD.idx  atomic.C3F277D98C9C5E57.idx  atomic_base.h.8E30BE0CABE3A9D8.idx  auto_ptr.h.8E36BE2C90FE0884.idx  basic_string.h.B5C6A696D1425819.idx  basic_string.tcc.7E353E526AF1CF03.idx  bessel_function.tcc.61A191CC7006B8F0.idx  beta_function.tcc.B2B9A44611F65D18.idx  bit.97A6729171C74BEB.idx  c++config.h.60C58B9032195EA2.idx  cctype.FBCDE679D5BEDFB8.idx  cdefs.h.FC477E759ACAD3AA.idx  char_traits.h.AD9D0B0C68E0350E.idx  charconv.h.7596B0093818A790.idx  (+316 more)
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.rcc/: apptest6_raw_qml_0.qrc  qmake_test6.qrc  qrc_apptest6_raw_qml_0.cpp  qrc_qmake_test6.cpp
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/.rcc/qmlcache/: apptest6_Main_qml.cpp  apptest6_qml_loader_file_list.rsp  apptest6_qmlcache_loader.cpp
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/apptest6_autogen/: deps  mocs_compilation.cpp
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/apptest6_autogen/EWIEGA46WW/: moc_Scene.cpp  moc_Scene.cpp.d  moc_Scene.cpp.json
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/meta_types/: apptest6_json_file_list.txt  apptest6_json_file_list.txt.timestamp  qt6apptest6_debug_metatypes.json.gen
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/qmltypes/: apptest6_foreign_types.txt
build-test6-Desktop_Qt_6_5_2_GCC_64bit-Debug/test6/: Main.qml  apptest6_qml_module_dir_map.qrc  qmldir
src/: Main.qml  Scene.cpp  Scene.h  main.cpp  shpformat.h  shpreader.cpp  shpreader.h
test4/: CMakeLists.txt  Main.qml  circle.cpp  circle.h  figure.h  main.cpp  square.cpp  square.h  whiteboard.cpp  whiteboard.h
test5/: CMakeLists.txt  Main.qml  Part.cpp  Part.h  Shape.cpp  Shape.h  TODO.txt  main.cpp  scene.cpp  scene.h
test6/: CMakeLists.txt  Main.qml  Part.cpp  Part.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  esempio.txt  graph.txt  main.cpp  shpformat.cpp  shpreader.cpp  shpreader.h
